platform/core/github-arc-runners/runners/templates/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: github-runner-egress-restrict
spec:
  endpointSelector:
    matchLabels:
      github-job-pod: 'true'
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: UDP
            - port: '53'
              protocol: TCP
          rules:
            dns:
              - matchPattern: '*'
    - toEntities:
        - world
